2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.1.0.

2016-03-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	Import changes from Emacs master branch
	* soap-client.el: Update copyright years.
	(soap-warning): Fix docstring quoting.
	(soap-decode-date-time): Likewise.
	(soap-validate-xs-simple-type): Remove tabs for indentation.
	* soap-inspect.el: Update copyright years.

2016-02-29  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-find-port, soap-find-operation)
	(soap-operation-arity): new defuns
	(soap-invoke-internal): use soap-find-port, soap-find-operation.

2015-11-11  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.0.2.

2015-11-11  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-warning): Use format, not format-message.

2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Add cl-lib to Package-Requires.  Require cl-lib.
	(soap-validate-xs-simple-type): Use cl-labels instead of cl-flet.

2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Support Emacs versions that do not have
	define-error.

2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el: Remove version header.

2015-11-08  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el, jira2.el: Fix first line header
	format.

2015-10-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Bump version to 3.0.1.

2015-10-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Update home page.

2015-10-22  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Bump version to 3.0.0.

2015-10-22  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el: Merge in changes from Emacs master branch.

2015-10-22  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Merge in changes from Emacs master branch.
